fix: no scrollbars

--- a/src/global/global.scss
+++ b/src/global/global.scss
@@ -2,7 +2,6 @@
 
 * {
 	font-weight: 500;
-	scrollbar-width: none;
 }
 
 strong {
